# rdk_logger

./: CHANGELOG.md  LICENSE  Makefile.am  NOTICE  README.md  build.sh  build_dependencies.sh  config.mak  configure.ac  cov_build.sh  debug.ini  debug.ini.sample  log4crc  rdkb_debug.ini  rdkb_debug_arm.ini  rdkb_debug_atom.ini  rdkb_log4crc  rdkb_log4crc_arm  rdkb_log4crc_atom  rdkc_log4crc
.github/: CODEOWNERS
.github/workflows/: L1-tests.yml
cfg/: Makefile.am
doc/: rdklogger-doxygen.cfg
include/: Makefile  Makefile.am  Makefile.in  rdk_debug.h  rdk_error.h  rdk_logger.h  rdk_logger_milestone.h  rdk_logger_types.h  rdk_utils.h
scripts/: logMilestone.sh
src/: Makefile.am  rdk_debug.c  rdk_debug_priv.c  rdk_dynamic_logger.c  rdk_logger_init.c  rdk_logger_milestone.cpp  rdk_logger_onboard.c  rdk_logger_util.c
src/include/: rdk_debug_priv.h  rdk_dynamic_logger.h
test/: Makefile.am  rdk_dynamic_logger_test.c  rdk_logger_debug_test.c  rdk_logger_test_main.c
unittests/: CMakeLists.txt  Gtest_log4crc  gtest_app.h  main.cpp  rdkIsDbgEnabled.cpp  rdkloggerInit.cpp  rdkloggerMsgPrintf.cpp  rdkloggerMsgVsprintf.cpp  sample_gtest_debug.ini
utils/: Makefile.am  rdk_logger_onboard_main.c  rdklogctrl.c  rdklogmilestone.c
